# toyws

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/ssr/: CMakeLists.txt  README.md  main.cpp
include/toyws/: client.hpp  client_pool.hpp  error.hpp  http_headers_map.hpp  http_io.hpp  http_request.hpp  http_response.hpp  io_service.hpp  io_service_impl.hpp  io_service_uring.hpp  request.hpp  request_handler.hpp  request_pool.hpp  router.hpp  socket.hpp  test_client.hpp  toyws.hpp
source/: client_pool.cpp  http_io.cpp  io_service_uring.cpp  request_handler.cpp  request_pool.cpp  router.cpp  test_client.cpp  toyws.cpp
test/: CMakeLists.txt
test/source/: http_io_test.cpp  io_service_test.cpp  toyws_test.cpp
